# AutoHound

./: .env.example  .gitignore  LICENSE  PRD.txt  README.md  START_HERE.txt  demo_report.html  install.bat  install.ps1  pyproject.toml  requirements.txt  restart.bat  setup.ps1
.github/workflows/: ci.yml  release.yml
autohound/: __init__.py  __main__.py  cli.py  constants.py  models.py
autohound/ingestor/: __init__.py  json_ingestor.py  neo4j_ingestor.py
autohound/reasoning/: __init__.py  llm_engine.py
autohound/reporting/: __init__.py  attack_navigator.py  markdown_report.py
autohound/serializer/: __init__.py  graph_serializer.py
autohound/utils/: __init__.py  logging.py
bloodhound_ai/: __init__.py  cli.py  models.py
bloodhound_ai/ingestor/: __init__.py  json_ingestor.py  neo4j_ingestor.py
bloodhound_ai/reasoning/: __init__.py  llm_engine.py
bloodhound_ai/reporting/: __init__.py  attack_navigator.py  markdown_report.py
bloodhound_ai/serializer/: __init__.py  graph_serializer.py
bloodhound_ai/utils/: __init__.py  logging.py
installer/: README.md  main.js  package-lock.json  package.json
installer/renderer/: index.html  intro.html  renderer.js  styles.css
installer/src/: index.html  main.js  renderer.js  styles.css
test_data/: AUTOHOUND_HELP.txt  HOW_TO_TEST.txt  QUICK_REFERENCE.txt  README.md  sample1_kerberoasting.json  sample2_delegation.json  sample3_acl_abuse.json
tests/: __init__.py  test_cli.py  test_graph_performance.py  test_ingestor.py  test_llm_engine.py  test_logging.py  test_models.py  test_neo4j_ingestor.py  test_reporting.py  test_serializer.py
tests/fixtures/: sample_attack_paths.py  sample_bloodhound.json  sample_bloodhound_data.json
