[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autohound"
version = "1.0.3"
description = "AutoHound - Active Directory Attack Path Intelligence Engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Gordon Prescott"}
]
keywords = ["security", "active-directory", "penetration-testing", "red-team", "autohound", "llm", "ach"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "neo4j>=5.14.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "mitreattack-python>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
autohound = "autohound.cli:main"

[project.urls]
Homepage = "https://github.com/geo2x/AutoHound"
Repository = "https://github.com/geo2x/AutoHound"
Issues = "https://github.com/geo2x/AutoHound/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autohound*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=autohound --cov-report=term-missing"
